--- a/src/app/sublist/sublist.component.html
+++ b/src/app/sublist/sublist.component.html
@@ -12,78 +12,26 @@
 
 
   <div class="list">
-    <div class="row data">
-      
+
+    <div class="row data" *ngFor="let user of showusers">
+
       <div class="col-md-1 col-lg-1 col-sm-1 col-xs-1"><img src="../../assets/img/face.jpeg" alt=""></div>
       <div class="col-md-2 col-lg-2 col-sm-2 col-xs-2 p0">
-        <p class="name p0" >Brij singh</p>
-        <p class="disc p0">10am 21/12/2018</p>
+        <p class="name p0">{{user.name}}</p>
+        <p class="disc p0">{{user.subscription[user.subscription.length-1].startDate}}</p>
       </div>
       <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6 ">
-        <p class="subs m10">has subscribed for <span>Gold membership</span></p>
+        <p class="subs m10">has subscribed for <span>{{user.subscription[user.subscription.length-1].id.name}}
+            membership</span></p>
       </div>
 
       <div class="col-md-3 col-lg-3 col-sm-3 col-xs-3  right">
-        <p (click)="details()">
+        <p (click)="details(user)">
           <i class="fa fa-eye" aria-hidden="true"></i>View
         </p>
       </div>
 
     </div>
-    <div class="row data">
-      
-        <div class="col-md-1 col-lg-1 col-sm-1 col-xs-1"><img src="../../assets/img/face.jpeg" alt=""></div>
-        <div class="col-md-2 col-lg-2 col-sm-2 col-xs-2 p0">
-          <p class="name p0" >Brij singh</p>
-          <p class="disc p0">10am 21/12/2018</p>
-        </div>
-        <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6 ">
-          <p class="subs m10">has subscribed for <span>Gold membership</span></p>
-        </div>
-  
-        <div class="col-md-3 col-lg-3 col-sm-3 col-xs-3  right">
-          <p (click)="details()">
-            <i class="fa fa-eye" aria-hidden="true"></i>View
-          </p>
-        </div>
-  
-      </div>
-      <div class="row data">
-      
-          <div class="col-md-1 col-lg-1 col-sm-1 col-xs-1"><img src="../../assets/img/face.jpeg" alt=""></div>
-          <div class="col-md-2 col-lg-2 col-sm-2 col-xs-2 p0">
-            <p class="name p0" >Brij singh</p>
-            <p class="disc p0">10am 21/12/2018</p>
-          </div>
-          <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6 ">
-            <p class="subs m10">has subscribed for <span>Gold membership</span></p>
-          </div>
-    
-          <div class="col-md-3 col-lg-3 col-sm-3 col-xs-3  right">
-            <p (click)="details()">
-              <i class="fa fa-eye" aria-hidden="true"></i>View
-            </p>
-          </div>
-    
-        </div>
-        <div class="row data">
-      
-            <div class="col-md-1 col-lg-1 col-sm-1 col-xs-1"><img src="../../assets/img/face.jpeg" alt=""></div>
-            <div class="col-md-2 col-lg-2 col-sm-2 col-xs-2 p0">
-              <p class="name p0" >Brij singh</p>
-              <p class="disc p0">10am 21/12/2018</p>
-            </div>
-            <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6 ">
-              <p class="subs m10">has subscribed for <span>Gold membership</span></p>
-            </div>
-      
-            <div class="col-md-3 col-lg-3 col-sm-3 col-xs-3  right">
-              <p (click)="details()" class="cursor">
-                <i class="fa fa-eye" aria-hidden="true"></i>View
-              </p>
-            </div>
-      
-          </div>
 
   </div>
 </div>
