--- a/src/app/sublist/sublist.component.html
+++ b/src/app/sublist/sublist.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="input-group">
-    <input type="text" class="form-control" placeholder="Search" name="search">
+    <input type="text" class="form-control" (keyup)="onKey($event)" placeholder="Search" name="search">
     <div class="input-group-btn">
       <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
     </div>
